--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,14 +12,25 @@ jobs:
           command: |
             pip install -e .["deploy"] --user
             npm install -g cdk
-            apt-get update && apt-get install docker -y
+
+      - run:
+          name: install docker-ce-cli
+          command: |
+            apt-get update
+            apt-get install apt-transport-https \
+              ca-certificates curl gnupg2 software-properties-common -y
+            curl -fsSL https://download.docker.com/linux/debian/gpg | apt-key add -
+            add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/debian buster stable"
+            apt-get update
+            apt-get install docker-ce-cli -y
 
       - run:
           name: create lambda package
           command: |
             docker build . -t lambda:latest -f Dockerfiles/lambda/Dockerfile
-            docker run --rm -v $PWD:/local/ lambda:latest /bin/sh -c 'cp /tmp/package.zip /local/package.zip'
-            ls
+            docker run --name lambda lambda:latest
+            docker cp lambda:/tmp/package.zip package.zip
+
       - deploy:
           name: master branch deployed to cdk stack
           command: |
