--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,5 +36,5 @@ jobs:
           name: master branch deployed to cdk stack
           command: |
             if [ "${CIRCLE_BRANCH}" == "master" ]; then
-              STAGE='prod' cdk deploy covid-api-lambda-prod --region us-east-1
+              STAGE='prod' cdk deploy covid-api-lambda-prod --region us-east-1 --require-approval never
             fi
