--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,9 @@ jobs:
           command: pip install tox codecov --user
       - run:
           name: test
-          command: ~/.local/bin/tox
+          command: |
+            touch ~/.aws/credentials
+            ~/.local/bin/tox
 
   build:
     docker:
