update pre-commit config and add isort

--- a/tox.ini
+++ b/tox.ini
@@ -19,6 +19,7 @@ commands =
     black
 
 
+# Lint
 [flake8]
 ignore = D203
 exclude = .git,__pycache__,docs/source/conf.py,old,build,dist
@@ -26,5 +27,12 @@ max-complexity = 14
 max-line-length = 90
 
 [mypy]
-no_strict_optional = true
+no_strict_optional = True
 ignore_missing_imports = True
+
+[tool:isort]
+profile=black
+known_first_party = covid_api
+forced_separate = fastapi,starlette
+known_third_party = rasterio,morecantile,rio_tiler
+default_section = THIRDPARTY
