--- a/.gitignore
+++ b/.gitignore
@@ -82,7 +82,7 @@ celerybeat-schedule
 
 # dotenv
 .env
-*.env
+*.env*
 
 # virtualenv
 .venv
@@ -102,7 +102,7 @@ ENV/
 # mypy
 .mypy_cache/
 
-cdk.out/package.zip
+cdk.out/*
 *.tif
 
 # vscode
