--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,10 @@ services:
       dockerfile: Dockerfiles/ecs/Dockerfile
     ports:
       - "8000:8000"
+    volumes:
+      - type: bind
+        source: ./covid_api
+        target: /app/covid_api
     environment:
       - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
       - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
