added pass through endpoint for modis tiles for contrails detections

--- a/Dockerfiles/ecs/Dockerfile
+++ b/Dockerfiles/ecs/Dockerfile
@@ -4,6 +4,7 @@ FROM laurents/uvicorn-gunicorn-fastapi:python3.7-slim
 # FROM tiangolo/uvicorn-gunicorn-fastapi:python3.7
 
 ENV CURL_CA_BUNDLE /etc/ssl/certs/ca-certificates.crt
+RUN sed -i 's/DEFAULT@SECLEVEL=2/DEFAULT@SECLEVEL=1/' /etc/ssl/openssl.cnf
 
 COPY README.md /app/README.md
 COPY covid_api/ /app/covid_api/
