modified docker image to virtual machine image in circleci config to enable docker to mount filesystem

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,8 +19,10 @@ jobs:
           command: ~/.local/bin/pre-commit run --all-files
 
   deploy-staging:
-    docker:
-      - image: nikolaik/python-nodejs:python3.7-nodejs12
+    # docker:
+    #   - image: nikolaik/python-nodejs:python3.7-nodejs12
+    machine: 
+      image: ubuntu-2004:202010-01
     working_directory: ~/covid-api
     steps:
       - checkout
@@ -50,8 +52,10 @@ jobs:
             fi
 
   deploy-production:
-    docker:
-      - image: nikolaik/python-nodejs:python3.7-nodejs12
+    # docker:
+    #   - image: nikolaik/python-nodejs:python3.7-nodejs12
+    machine: 
+      image: ubuntu-2004:202010-01
     working_directory: ~/covid-api
     steps:
       - checkout
