--- a/Dockerfiles/lambda/Dockerfile
+++ b/Dockerfiles/lambda/Dockerfile
@@ -21,4 +21,4 @@ RUN rm -rdf /var/task/stack
 
 
 COPY lambda/handler.py /var/task/handler.py
-
+CMD ["bash", "-c", "cp -R /var/task/. /asset-output/."]
