--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,7 @@ jobs:
     working_directory: ~/covid-api
     steps:
       - checkout
-      - setup_remote_docker
+      #- setup_remote_docker
       - run:
           name: install dependencies
           command: |
