added statement to use python3.7 in machine executor

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,6 +27,11 @@ jobs:
     steps:
       - checkout
       #- setup_remote_docker
+      - run: 
+        name: use python 3.7
+        command: |
+          pyenv global 3.7
+
       - run:
           name: install dependencies
           command: |
@@ -94,7 +99,7 @@ workflows:
             - test
           filters:
             branches:
-              only: develop
+              only: feature/*
       - deploy-production:
           requires:
             - test
