updated branch regex filter

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -99,7 +99,7 @@ workflows:
             - test
           filters:
             branches:
-              only: feature/*
+              only: feature\/.*
       - deploy-production:
           requires:
             - test
