updated branch regex filter

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,8 @@ jobs:
   deploy-staging:
     # docker:
     #   - image: nikolaik/python-nodejs:python3.7-nodejs12
-    machine: true
+    machine: 
+      image: ubuntu-2004:202010-01
     working_directory: ~/covid-api
     steps:
       - checkout
@@ -29,6 +30,7 @@ jobs:
       - run: 
           name: use python 3.7
           command: |
+            pyenv install -v 3.7.0
             pyenv global 3.7.0
 
       - run:
