--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,13 +42,13 @@ jobs:
       - run:
           name: install docker-ce-cli
           command: |
-            apt-get update
-            apt-get install apt-transport-https \
+            sudo apt-get update
+            sudo apt-get install apt-transport-https \
               ca-certificates curl gnupg2 software-properties-common -y
-            curl -fsSL https://download.docker.com/linux/debian/gpg | apt-key add -
+            curl -fsSL https://download.docker.com/linux/debian/gpg | sudo apt-key add -
             add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/debian buster stable"
-            apt-get update
-            apt-get install docker-ce-cli -y
+            sudo apt-get update
+            sudo apt-get install docker-ce-cli -y
 
       - deploy:
           name: develop branch deployed to staging cdk stack
