--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,7 +30,7 @@ jobs:
       - run: 
           name: use python 3.7
           command: |
-            pyenv list
+            pyenv versions
             pyenv global 3.7.0
 
       - run:
