changed machine image to circleci/classic

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,7 +22,7 @@ jobs:
     # docker:
     #   - image: nikolaik/python-nodejs:python3.7-nodejs12
     machine: 
-      image: ubuntu-2004:202010-01
+      image: circleci/classic:201808-01
     working_directory: ~/covid-api
     steps:
       - checkout
