--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,8 +21,9 @@ jobs:
   deploy-staging:
     # docker:
     #   - image: nikolaik/python-nodejs:python3.7-nodejs12
-    machine: true
-    #  image: circleci/classic:201808-01
+    machine: # true
+      #image: circleci/classic:201808-01
+      image: ubuntu-2004:202010-01
     working_directory: ~/covid-api
     steps:
       - checkout
