--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,8 @@ services:
       - MEMCACHE_USERNAME=myuser
       - MEMCACHE_PASSWORD=mypassword
       - PLANET_API_KEY=${PLANET_API_KEY}
+      - DATASET_METADATA_FILENAME=${STAGE}-dataset-metadata.json
+      - DATASET_METADATA_GENERATOR_FUNCTION_NAME=${STAGE}-dataset-metadata-generator
       - PORT=8000
       - PYTHONWARNINGS=ignore
       - VARIABLE_NAME=app
