--- a/stack/config.yml.example
+++ b/stack/config.yml.example
@@ -2,6 +2,7 @@ PROJECT_NAME: covid-api
 STAGE: dev
 # primary bucket
 BUCKET: covid-eo-data
+INDICATOR_BUCKET: covid-eo-data
 
 # Additional environement variable to set in the task/lambda
 TASK_ENV:
