--- a/Dockerfiles/ecs/Dockerfile
+++ b/Dockerfiles/ecs/Dockerfile
@@ -9,6 +9,8 @@ RUN sed -i 's/DEFAULT@SECLEVEL=2/DEFAULT@SECLEVEL=1/' /etc/ssl/openssl.cnf
 COPY README.md /app/README.md
 COPY covid_api/ /app/covid_api/
 COPY setup.py /app/setup.py
+RUN mkdir /app/stack
+COPY stack/config.yml /app/stack/config.yml
 
 RUN pip install -e /app/. --no-cache-dir
 
