Some config and documentation fixes

--- a/Dockerfiles/lambda/Dockerfile
+++ b/Dockerfiles/lambda/Dockerfile
@@ -9,7 +9,7 @@ COPY covid_api/ /app/covid_api/
 COPY setup.py /app/setup.py
 
 RUN pip install --upgrade pip
-RUN pip install . "mangum>=0.9.0" -t /var/task --no-binary numpy, pydantic
+RUN pip install . "mangum>=0.9.0,<0.10.1" -t /var/task --no-binary numpy, pydantic
 
 # Reduce package size and remove useless files
 RUN cd /var/task && find . -type f -name '*.pyc' | while read f; do n=$(echo $f | sed 's/__pycache__\///' | sed 's/.cpython-[2-3][0-9]//'); cp $f $n; done;
