--- a/stack/config.yml.example
+++ b/stack/config.yml.example
@@ -1,8 +1,8 @@
-PROJECT_NAME: my-eo-lab-project
+PROJECT_NAME: eo-lab-project
 STAGE: dev
 # UPDATE ME: primary bucket
 BUCKET: data-bucket
-INDICATOR_BUCKET: data-bucket
+INDICATOR_BUCKET: indicator-bucket
 
 # Additional environement variable to set in the task/lambda
 TASK_ENV:
@@ -47,21 +47,4 @@ DATASET_METADATA_FILENAME: dev-dataset-metadata.json
 STAC_API_URL: https://earth-search.aws.element84.com/v0
 DATASETS:
   STATIC:
-  - agriculture.json
-  - co2-diff.json
-  - co2.json
-  - detections-contrail.json
-  - detections-plane.json
-  - detections-ship.json
-  - detections-vehicles.json
-  - nightlights-hd.json
-  - nightlights-viirs.json
-  - no2-diff.json
-  - no2.json
-  - population.json
-  - recovery.json
-  - slowdown.json
-  - togo-ag.json
-  - water-chlorophyll.json
-  - water-pzd.json
-  - water-spm.json
+  - MODIS13A1.006.json
